--- a/BUXCryptoTest/Resources/Base.lproj/Main.storyboard
+++ b/BUXCryptoTest/Resources/Base.lproj/Main.storyboard
@@ -10,20 +10,35 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Currency List Controller-->
+        <!--Currency List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="CurrencyListControllerID" id="BYZ-38-t0r" customClass="CurrencyListController" customModule="BUXCryptoTest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CurrencyListControllerID" id="BYZ-38-t0r" customClass="CurrencyListViewController" customModule="BUXCryptoTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ezy-ye-viU">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Ezy-ye-viU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="6yy-yN-Xzd"/>
+                            <constraint firstItem="Ezy-ye-viU" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="X0D-dZ-Xx2"/>
+                            <constraint firstItem="Ezy-ye-viU" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="fii-YT-1lv"/>
+                            <constraint firstItem="Ezy-ye-viU" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="fyg-If-C1e"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="Ezy-ye-viU" id="fk1-Dn-wfX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-353" y="30"/>
+            <point key="canvasLocation" x="-354.39999999999998" y="29.23538230884558"/>
         </scene>
         <!--Trade View Controller-->
         <scene sceneID="gq3-hk-0F1">
@@ -32,6 +47,16 @@
                     <view key="view" contentMode="scaleToFill" id="r9h-lV-eHZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mjr-Xi-Onf">
+                                <rect key="frame" x="0.0" y="88" width="375" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="ZhI-Oh-TuS">
+                                <rect key="frame" x="140" y="258" width="94" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </stepper>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="oof-eC-iiH"/>
                     </view>
